2001-04-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTask.m: Bugfix to send out task termination notification
	and clean up correctly when a task is killed by a signal rather than
	exiting cleanly.

2001-04-09  Adam Fedor  <fedor@gnu.org>

	* 1.0 branch merged into main.

2001-04-06  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSString.m (pathSepMember): Made trivial and inlined.
	([-stringsByAppendingPaths:]): Count the array only once, not for
	any loop in the cycle.
	
2001-04-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUser.m: NSTemporaryDirectory() rewrite for improved
	security and reliability.  Expect MINGW update soon.

2001-04-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUser.m: Tidied some stuff to conform to coding standards.
	Added FIXME where unsure of code.  Tidied code to get name of user.
	* configure.in: Added checks for a few functions needed to get user.

2001-03-37  Jonathan Gapen  <jagapen@home.com>

	* Source/NSString.m: New private function to compute the scalar value
	of a high-low surrogate pair.  New surrogate range class variables.
	Optimize ([-hasPrefix]) and ([-hasSuffix]) by using NSAnchoredSearch.
	Add UTF-8 code to ([-dataUsingEncoding:allowLossyConversion:]).

2001-03-26  Jonathan Gapen  <jagapen@home.com>

	* Source/Makefile.preamble: No need to define HAVE_LIBXML here.
	* Source/NSBundle.m: ([+initialize]) and ([+pathForGNUstepResource:
	ofType:inDirectory:]) now use NSSearchPathForDirectoriesInDomains()
	to find directories, rather than use env vars directly.
	* Source/NSCharacterSet.m: Ditto for ([_-bitmapForSet:]).
	* Source/NSDictionary.m: Make NSLog() include the filename
	in ([-initWithContentsOfFile:]).
	* Source/NSUser.m: Re-implement NSStandardApplicationPaths() and
	NSStandardLibraryPaths() with NSSearchPathsForDirectoriesInDomains().
	In latter function, support $GNUSTEP_SYSTEM_ROOT/Developer/Demos.

2001-03-21  Jonathan Gapen  <jagapen@home.com>
